Add link validation