@@ -1,18 +1,17 @@
 package edu.java.util;
 
+import org.jetbrains.annotations.Nullable;
+
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import org.jetbrains.annotations.Nullable;
+import java.net.URL;
 
 public class URIUtils {
     private URIUtils() {
     }
 
-    public static @Nullable URI castStringToURI(String uri) {
-        try {
-            return new URI(uri);
-        } catch (URISyntaxException e) {
-            return null;
-        }
+    public static @Nullable URI castStringToURI(String uri) throws URISyntaxException, MalformedURLException{
+            return new URL(uri).toURI();
     }
 }
